syntax = "proto3";

option csharp_namespace = "SimpleGrpcProject";

import "google/protobuf/empty.proto";

package category;

message Category {
  string category_id = 1;
  string name = 2;
}

service CategoryServiceProto {
  rpc GetCategories (GetCategoriesRequest) returns (GetCategoriesResponse);
  rpc GetCategoriesStream (GetCategoriesRequest) returns (stream GetCategoryResponse);
  rpc GetCategory (GetCategoryRequest) returns (GetCategoryResponse);
  rpc GetMultipleCategory (stream GetCategoryRequest) returns (GetCategoriesResponse);
  rpc GetCategoryBidirectional (stream GetCategoryRequest) returns (stream GetCategoryResponse);
  rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryResponse);
  rpc UpdateCategory (UpdateCategoryRequest) returns (UpdateCategoryResponse);
  rpc DeleteCategory (DeleteCategoryRequest) returns (DeleteCategoryResponse);
  rpc PrintCategory (stream PrintCategoryRequest) returns (google.protobuf.Empty);
  rpc GetPagedCategories (stream GetPagedCategoriesRequest) returns (stream PagedCategoriesResponse);
  rpc GetCursorPagedCategories (stream GetCursorPagedCategoriesRequest) returns (stream CursorPagedCategoriesResponse);
}

message GetCategoriesRequest {}
message GetCategoriesResponse {
  repeated Category categories = 1;
}

message  GetCategoryRequest {
  string category_id = 1;
}
message  GetCategoryResponse {
  Category category = 1;
}

message CreateCategoryRequest {
  Category category = 1;
}
message CreateCategoryResponse {
  Category category = 1;
  string error = 2;
}

message UpdateCategoryRequest {
  Category category = 1;
}
message UpdateCategoryResponse {
  Category category = 1;
}

message DeleteCategoryRequest {
  string category_id = 1;
}
message DeleteCategoryResponse {
  Category category = 1;
}

message PrintCategoryRequest {
  string category = 1;
}

message GetPagedCategoriesRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string sort_order = 3;
}
message PagedCategoriesResponse {
  int32 page = 1;
  int32 page_size = 2;
  int32 total_count = 3;
  bool is_next_page = 4;
  bool is_previous_page = 5;
  repeated Category items = 6;
}

message GetCursorPagedCategoriesRequest {
  string cursor = 1;
  int32 page_size = 2;
  optional string sort_order = 3;
}
message CursorPagedCategoriesResponse {
  string cursor = 1;
  int32 page_size = 2;
  repeated Category items = 3;
}